// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - CityCard Should render city with visited & wishlist selection 1`] = `
<DocumentFragment>
  <li
    class="css-16ax18g"
    data-testid="city-card"
  >
    <div
      class="css-qiuk2s"
    >
      <p
        class="chakra-text css-wjomy9"
      >
        London
      </p>
      <span
        class="chakra-text css-3b0vjl"
      >
        (United Kingdom)
      </span>
    </div>
    <div
      class="css-zdpt2t"
    >
      <button
        aria-label="Marked as visited, Click to toggle status"
        class="chakra-button css-8x7hex"
        data-testid="city-card-visited-btn-active"
        title="Marked as visited, Click to toggle status"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Added in wishlist, Click to toggle status"
        class="chakra-button css-8x7hex"
        data-testid="city-card-wishlist-btn-active"
        title="Added in wishlist, Click to toggle status"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M12 8v8"
            />
            <path
              d="M8 12h8"
            />
          </g>
        </svg>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`Component - CityCard Should render city without visited & wishlist selection 1`] = `
<DocumentFragment>
  <li
    class="css-16ax18g"
    data-testid="city-card"
  >
    <div
      class="css-qiuk2s"
    >
      <p
        class="chakra-text css-wjomy9"
      >
        London
      </p>
      <span
        class="chakra-text css-3b0vjl"
      >
        (United Kingdom)
      </span>
    </div>
    <div
      class="css-zdpt2t"
    >
      <button
        aria-label="Marked as not visited, Click to toggle status"
        class="chakra-button css-1o56cth"
        data-testid="city-card-visited-btn"
        title="Marked as not visited, Click to toggle status"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Not in wishlist, Click to toggle status"
        class="chakra-button css-1o56cth"
        data-testid="city-card-wishlist-btn"
        title="Not in wishlist, Click to toggle status"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M12 8v8"
            />
            <path
              d="M8 12h8"
            />
          </g>
        </svg>
      </button>
    </div>
  </li>
</DocumentFragment>
`;
